testsuite/tests/safeHaskell/overlapping/SH_Overlap5.stderr
[1 of 3] Compiling SH_Overlap5_B    ( SH_Overlap5_B.hs, SH_Overlap5_B.o )
[2 of 3] Compiling SH_Overlap5_A    ( SH_Overlap5_A.hs, SH_Overlap5_A.o )
[3 of 3] Compiling SH_Overlap5      ( SH_Overlap5.hs, SH_Overlap5.o )

SH_Overlap5.hs:15:8: error:
    Unsafe overlapping instances for C [Int] arising from a use of ‘f’
    The matching instance is:
      instance [overlap ok] [safe] C [Int]
        -- Defined at SH_Overlap5_A.hs:11:3
    It is compiled in a Safe module and as such can only
    overlap instances from the same module, however it
    overlaps the following instances from different modules:
      instance [safe] C [a] -- Defined at SH_Overlap5.hs:11:3
    In the expression: f ([1, 2, 3, 4] :: [Int])
    In an equation for ‘test’: test = f ([1, 2, 3, 4] :: [Int])
